<resources>
    <string name="app_name">PetNote</string>
    <string name="login">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="download_photo">Загрузить фото</string>
    <string name="name_pet1">Введите кличку</string>
    <string name="age1">Введите возраст</string>
    <string name="weight1">Введите рост</string>
    <string name="OK">OK</string>
    <string name="log_in">Войти</string>
    <string name="name1">App</string>
    <string name="input_nickname">Ввод Клички</string>
    <string name="input_age">Ввод возраста</string>
    <string name="input_weight">Ввод веса</string>
    <string name="pet_reg">Регистрация питомца</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="reg_pet">Добавить</string>
    <string name="name_pet">Кличка</string>
    <string name="age">Возраст</string>
    <string name="weight">Вес</string>
    <string name="notice">Настроить уведомления</string>
    <string name="back">Назад</string>
    <string name="eat">Еда</string>
    <string name="water">Вода</string>
    <string name="medications">Лекарства</string>
    <string name="walk">Прогулка</string>
    <string name="combing">Вычесывание</string>
    <string name="bathing">Купание</string>
    <string name="setting_up_notifications">Настройка уведомлений</string>
    <string name="pets">ПИТОМЦЫ</string>
</resources>