<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/pet_reg"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_rectangle2" />
    <ImageView
        android:id="@+id/download_photo_pet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="90dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="480dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat_change" />

    <LinearLayout
        android:id="@+id/ll_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:layout_marginBottom="65dp"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_photo_pet">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_download_photo_pet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_app"
            android:text="@string/upload_photo"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/pet_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_edit"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_nickname"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/button_color2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/age_pet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_edit"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_age"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:textColorHint="@color/button_color2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/weight_pet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/text_edit"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_weight"
            android:textColor="@color/black"
            android:textColorHint="@color/button_color2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_OK"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"

            android:background="@drawable/button_app"
            android:text="@string/OK"
            android:textColor="@color/white" />


    </LinearLayout>


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:srcCompat="@drawable/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/tabbar_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8C683"
            app:srcCompat="@drawable/mask_group" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/tabbar_pets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8C683"
            app:srcCompat="@drawable/mask_group_1" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/tabbar_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8C683"
            app:srcCompat="@drawable/mask_group_2" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/tabbar_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8C683"
            app:srcCompat="@drawable/mask_group_3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>