<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:backgroundTint="@color/image_color"
    tools:context=".AnimalDetails">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_rectangle2" />

    <ImageView
        android:id="@+id/details_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat_change" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_app"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="590dp"
        android:layout_marginEnd="300dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="380dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_image"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:id="@+id/details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name_pet"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/details_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/weight"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/details_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/age"
            android:textSize="25sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_pet"
        app:srcCompat="@drawable/notes" />

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginTop="300dp"-->
    <!--        android:layout_marginEnd="60dp"-->
    <!--        android:layout_marginBottom="60dp"-->
    <!--        android:layout_marginStart="60dp"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_marginBottom="70dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/imageView10"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">-->

    <!--        <ImageButton-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="20dp"-->
    <!--            android:layout_marginTop="30dp"-->
    <!--            android:layout_marginEnd="20dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:backgroundTint="@color/image_color"-->
    <!--            app:srcCompat="@drawable/m6" />-->

    <!--        <ImageButton-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="30dp"-->
    <!--            android:layout_marginEnd="20dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:backgroundTint="@color/image_color"-->
    <!--            app:srcCompat="@drawable/m5" />-->

    <!--        <ImageButton-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="30dp"-->
    <!--            android:layout_marginEnd="20dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:backgroundTint="@color/image_color"-->
    <!--            app:srcCompat="@drawable/m4" />-->

    <!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="15dp">

            <ImageButton
                android:id="@+id/eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/image_color"
                app:srcCompat="@drawable/m1" />

            <ImageButton
                android:id="@+id/kupanie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/image_color"
                app:srcCompat="@drawable/m2" />

            <ImageButton
                android:id="@+id/apteka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/image_color"
                app:srcCompat="@drawable/m3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/walk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/image_color"
                app:srcCompat="@drawable/m6" />

            <ImageButton
                android:id="@+id/grumer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/image_color"
                app:srcCompat="@drawable/m5" />

            <ImageButton
                android:id="@+id/puzirek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/image_color"
                app:srcCompat="@drawable/m4" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="590dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8C683"
            app:srcCompat="@drawable/mask_group" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8C683"
            app:srcCompat="@drawable/mask_group_1" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8C683"
            app:srcCompat="@drawable/mask_group_2" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8C683"
            app:srcCompat="@drawable/mask_group_3" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_app"
        android:text="@string/notice"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>